--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,23 @@
       <div class="chart-heading">
         chartId: <h4 class="inline"><%= id %></h4>
       </div>
+      <div style="max-width: 650px; margin: 1em auto">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Dicta laborum vel et est inventore. Unde ullam est ut sint dolorem sint aut. Libero beatae quos id fugit et voluptatem modi autem. Voluptatem rerum cum optio voluptatem. Consequuntur nam sed non eveniet suscipit consequuntur.</p>
+        <p>Enim recusandae ut velit distinctio sint beatae. Quae exercitationem ea qui alias. Consequatur dolorem ut placeat. Quo cum explicabo minima veritatis itaque et vel.</p>
+        <p>Molestiae at officiis sunt dolor ea quaerat qui asperiores. Necessitatibus nihil voluptatem id ea. Aut aut ducimus ut non voluptatum. Cumque corrupti ipsa minima est aperiam.</p>
+        <p>Vitae aut occaecati odit. Ut et non et sunt in. Sit repellat dolores ad nemo totam reprehenderit deserunt ut. Dicta incidunt porro delectus at quae nesciunt. Nam rerum fuga tempore. Ut sed ut sit omnis.</p>
+        <p>Dolores nam repellat dolore nesciunt. Ipsam quod quaerat occaecati optio ex harum veniam. Minima quis eum fugit. Cumque ducimus dolor et voluptatibus quisquam pariatur ut aut. Atque totam tempore voluptatem est voluptatem. Blanditiis placeat et illo tempora aliquid ut.</p>
+      </div>
       <div id="<%= id %>" class="na-dataviz"></div>
+      <div style="max-width: 650px; margin: 1em auto;">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Dicta laborum vel et est inventore. Unde ullam est ut sint dolorem sint aut. Libero beatae quos id fugit et voluptatem modi autem. Voluptatem rerum cum optio voluptatem. Consequuntur nam sed non eveniet suscipit consequuntur.</p>
+        <p>Enim recusandae ut velit distinctio sint beatae. Quae exercitationem ea qui alias. Consequatur dolorem ut placeat. Quo cum explicabo minima veritatis itaque et vel.</p>
+        <p>Molestiae at officiis sunt dolor ea quaerat qui asperiores. Necessitatibus nihil voluptatem id ea. Aut aut ducimus ut non voluptatum. Cumque corrupti ipsa minima est aperiam.</p>
+        <p>Vitae aut occaecati odit. Ut et non et sunt in. Sit repellat dolores ad nemo totam reprehenderit deserunt ut. Dicta incidunt porro delectus at quae nesciunt. Nam rerum fuga tempore. Ut sed ut sit omnis.</p>
+        <p>Dolores nam repellat dolore nesciunt. Ipsam quod quaerat occaecati optio ex harum veniam. Minima quis eum fugit. Cumque ducimus dolor et voluptatibus quisquam pariatur ut aut. Atque totam tempore voluptatem est voluptatem. Blanditiis placeat et illo tempora aliquid ut.</p>
+      </div>
       <% }) %>
   </div>
   <script src="https://d3fvh0lm0eshry.cloudfront.net/static/js/newamericadotorg.lite.js"></script>
